# tecker-poc-lab

./: .gitignore  .gitmodules  README.md
docs/: 00_아이디어_정리_인덱스.md  01_VOC_Quest.md  02_BeCareful.md  03_데이트_동선.md  05_GitHub_공유_레포_계획.md  06_병렬_Codex_구현_운영_계획.md
poc_code/becareful_poc/: .gitignore  README.md  VALIDATION_NOTES.md  pyproject.toml
poc_code/becareful_poc/golden_cases/: cases.json
poc_code/becareful_poc/samples/: default_rx.txt
poc_code/becareful_poc/src/: __init__.py  config.py  evaluate.py  handoff_builder.py  medicine_normalizer.py  mock_dur_checker.py  run.py  (+5 more)
poc_code/date_route_poc/: .env.example  README.md  pyproject.toml
poc_code/security_edr_agent_parser/: .env.example  .gitignore  README.md  collect_mac_telemetry.sh  dashboard_template.html  mac_agent.py  pyproject.toml  run_windows_agent.ps1  windows_agent.py
poc_code/voc_quest_poc/: README.md  pyproject.toml
poc_code/voc_quest_poc/docs/: validation_gate.md
poc_code/voc_quest_poc/samples/: default_seed.txt  evaluation_seeds.txt  sample_customer_voc.json  sample_naver_response.json
poc_code/voc_quest_poc/src/: __init__.py  config.py  insane_search_client.py  naver_search_client.py  permission_router.py  query_expander.py  quest_generator.py  result_writer.py  run.py  text_cleaner.py  voc_classifier.py
poc_code/voc_quest_poc/tests/: test_cli_contract.py  test_insane_search_client.py  test_naver_search_client.py  test_query_expander.py  test_quest_generator.py  test_text_cleaner.py  test_voc_classifier.py
poc_code/voc_quest_poc/tools/: build_quality_report.py  run_seed_batch.py
(+66 files in other folders)
